WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
205022
REGRESSION(
r253140
): WebAssembly validation should check for unmatched else before calling addElse/addElseToUnreachable
https://bugs.webkit.org/show_bug.cgi?id=205022
Summary
REGRESSION(r253140): WebAssembly validation should check for unmatched else b...
Tadeu Zagallo
Reported
2019-12-09 11:12:44 PST
...
Attachments
Patch
(4.03 KB, patch)
2019-12-09 11:15 PST
,
Tadeu Zagallo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tadeu Zagallo
Comment 1
2019-12-09 11:14:39 PST
<
rdar://problem/57748159
>
Tadeu Zagallo
Comment 2
2019-12-09 11:15:28 PST
Created
attachment 385172
[details]
Patch
WebKit Commit Bot
Comment 3
2019-12-09 15:23:58 PST
Comment on
attachment 385172
[details]
Patch Clearing flags on attachment: 385172 Committed
r253303
: <
https://trac.webkit.org/changeset/253303
>
WebKit Commit Bot
Comment 4
2019-12-09 15:23:59 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug