REGRESSION(r253140): WebAssembly validation should check for unmatched else before calling addElse/addElseToUnreachable https://bugs.webkit.org/show_bug.cgi?id=205022 <rdar://problem/57748159>

Reviewed by Saam Barati.

JSTests:

* wasm/regress/unmatched-else.js: Added.
(catch):

Source/JavaScriptCore:

When moving the validation code into the parser in r253140, I missed the validation check of whether
an if block was at the top of the control stack before calling addElse/addElseToUnreachable.

* wasm/WasmFunctionParser.h:
(JSC::Wasm::FunctionParser<Context>::parseExpression):
(JSC::Wasm::FunctionParser<Context>::parseUnreachableExpression):


Canonical link: https://commits.webkit.org/218250@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253303 268f45cc-cd09-0410-ab3c-d52691b4dbfc